<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bortolan.iquadriv2.ui.notizie.NotizieFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/news_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/circolari_title"
                style="?textAppearanceHeadline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:text="@string/circolari" />


            <TextView
                style="?textAppearanceCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/circolari_title"
                android:layout_alignParentEnd="true"
                android:text="@string/recenti" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/circolari_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            style="?textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/quadrinews" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/quadrinews_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
